tools/scrn_stubs.h

/* Avoid fortified libc wrappers that zig translate-c cannot handle */
int printf(const char *fmt, ...);
int snprintf(char *buf, unsigned long n, const char *fmt, ...);
int fputs(const char *s, void *stream);
int fflush(void *stream);
char *getenv(const char *name);
void free(void *p);
void *memcpy(void *d, const void *s, unsigned long n);
void *memset(void *s, int c, unsigned long n);
int strcmp(const char *a, const char *b);
unsigned long strlen(const char *s);
typedef int64_t off_t;
typedef void FILE;
extern FILE *stdin;
extern FILE *stdout;
extern FILE *stderr;
#define _(s) (s)
struct cap {
	char *tbuf;
	struct sortentry *sort;
	ptrdiff_t sortlen;
	char *abuf;
	char *abufp;
	long div;
	long baud;
	const char *pad;
	void (*out)(void *, char);
	void *outptr;
	int dopadding;
};
typedef struct cap CAP;
/* Full SCRN layout — Darwin LP64 total 840 (matches sizeof(SCRN)) */
struct scrn {
	CAP *cap;

	ptrdiff_t li;
	ptrdiff_t co;

	const char *ti;
	const char *cl;
	const char *cd;
	const char *te;
	const char *brp;
	const char *bre;

	int haz;
	int os;
	int eo;
	int ul;
	int am;
	int xn;

	const char *so;
	const char *se;

	const char *us;
	const char *ue;
	const char *uc;

	int ms;
	int _pad_ms;

	const char *mb;
	const char *md;
	const char *mh;
	const char *mr;
	const char *stricken;
	const char *dunderline;
	const char *me;

	const char *ZH;
	const char *ZR;

	const char *Sb;
	const char *Sf;
	int Co;
	int Tc;
	int ut;

	int da, db;
	int _pad_db;

	const char *al, *dl, *AL, *DL;
	const char *cs;
	int rr;
	int _pad_rr;
	const char *sf, *SF, *sr, *SR;

	const char *dm, *dc, *DC, *ed;
	const char *im, *ic, *IC, *ip, *ei;
	int mi;
	int _pad_mi;

	const char *bs;
	ptrdiff_t cbs;
	const char *lf;
	ptrdiff_t clf;
	const char *up;
	ptrdiff_t cup;
	const char *nd;

	const char *ta;
	ptrdiff_t cta;
	const char *bt;
	ptrdiff_t cbt;
	ptrdiff_t tw;

	const char *ho;
	ptrdiff_t cho;
	const char *ll;
	ptrdiff_t cll;
	const char *cr;
	ptrdiff_t ccr;
	const char *RI;
	ptrdiff_t cRI;
	const char *LE;
	ptrdiff_t cLE;
	const char *UP;
	ptrdiff_t cUP;
	const char *DO;
	ptrdiff_t cDO;
	const char *ch;
	ptrdiff_t cch;
	const char *cv;
	ptrdiff_t ccv;
	const char *cV;
	ptrdiff_t ccV;
	const char *cm;
	ptrdiff_t ccm;

	const char *ce;
	ptrdiff_t cce;

	int assume_256;
	int truecolor;
	int *palette;

	int scroll;
	int insdel;

	int (*scrn)[COMPOSE];
	int *attr;
	ptrdiff_t x, y;
	ptrdiff_t top, bot;
	int attrib;
	int ins;

	int *updtab;
	int avattr;
	int _pad_avattr;
	ptrdiff_t *sary;

	int *compose;
	ptrdiff_t *ofst;
	struct hentry *htab;
	struct hentry *ary;
};
typedef struct scrn SCRN;
struct charmap {
	struct charmap *next;
	const char *name;
	int type;
	int (*is_punct)(struct charmap *map, int c);
	int (*is_print)(struct charmap *map, int c);
	char _pad[2752 - 40];
};
void *joe_malloc(ptrdiff_t size);
void joe_free(void *ptr);
CAP *setcap(CAP *cap, long baud, void (*out)(void *, char), void *outptr);
void ttopen(void);
void ttclose(void);
void ttflsh(void);
void signrm(void);
extern long tty_baud;
extern ptrdiff_t obufsiz;
extern char *obuf;
extern int leave;
extern struct charmap *locale_map;
extern int dostaupd;
struct utf8_sm {
	char buf[8];
	ptrdiff_t ptr;
	int state;
	int accu;
};
int utf8_decode(struct utf8_sm *sm, char c);
int to_uni(struct charmap *cset, int c);