tools/main_stubs.h

typedef int64_t time_t;
int fileno(FILE *f);
int atexit(void (*func)(void));
time_t time(time_t *t);
struct b;
 typedef struct b B;
struct p;
 typedef struct p P;
 typedef struct window W;
struct screen;
 typedef struct screen Screen;
struct macro;
 typedef struct macro MACRO;
struct cmd;
 typedef struct cap CAP;
 typedef struct vt_context VT;
struct cmd {
	const char *name;
	int flag;
	int (*func)(W *w, int k);
	MACRO *m;
	int arg;
	const char *negarg;
};
struct macro {
	ptrdiff_t what;
	int k;
	int flg;
	const CMD *cmd;
	ptrdiff_t n;
	ptrdiff_t size;
	MACRO **steps;
};
typedef struct scrn SCRN;
struct screen {
	SCRN *t;
	ptrdiff_t wind;
	W *topwin;
	W *curwin;
	ptrdiff_t w, h;
};
typedef struct options OPTIONS;
struct p {
	LINK(P) link;
	B *b;
	char _pad0[24];
	off_t byte;
	off_t line;
	off_t col;
	off_t xcol;
	int valcol;
	int end;
	int attr;
	int valattr;
	P **owner;
	const char *tracker;
};
typedef int pid_t;
/* Layout mirrors gapbuffer/types.zig B (size 632) */
struct b {
	LINK(B) link;
	P *bof;
	P *eof;
	char *name;
	char _pad1[36];
	int orphan;
	int count;
	int changed;
	int backup;
	char _pad_backup[4];
	void *undo;
	char _pad_marks[88];
	OPTIONS o;
	P *oldcur;
	P *oldtop;
	P *err;
	char *current_dir;
	int shell_flag;
	int rdonly;
	int internal;
	int scratch;
	int er;
	pid_t pid;
	int out;
	VT *vt;
	int raw;
	char _pad_raw[4];
	void *db;
	void (*parseone)(struct charmap *map, const char *s, char **rtn_name, off_t *rtn_line);
};
CAP *my_getcap(char *name, long baud, void (*out)(void *outptr, char c), void *outptr);
int exemac(MACRO *m, int k);
extern int idleout;
extern int noxon;
extern int Baud;