tools/cclass_stubs.h

void exit(int status);
extern FILE *__stderrp;
void ttsig(int sig);