src/tty.zig

//! TTY and process interface — replaces `joe/tty.c`.
//!
//! Faithful C-ABI port of JOE's terminal I/O, signals, timers, and
//! multiplexed async process support. Generated from a goto-free rewrite
//! of tty.c (macOS/POSIX path) via `zig translate-c`, then cleaned for the
//! hybrid Zig+C build.

const std = @import("std");
const ptrdiff_t = c_long;

pub extern fn printf(fmt: [*c]const u8, ...) c_int;
pub extern fn snprintf(buf: [*c]u8, n: c_ulong, fmt: [*c]const u8, ...) c_int;
pub extern fn fputs(s: [*c]const u8, stream: ?*anyopaque) c_int;
pub extern fn fflush(stream: ?*anyopaque) c_int;
pub extern fn getenv(name: [*c]const u8) [*c]u8;
pub extern fn free(p: ?*anyopaque) void;
pub extern fn memcpy(d: ?*anyopaque, s: ?*const anyopaque, n: c_ulong) ?*anyopaque;
pub extern fn memset(s: ?*anyopaque, c: c_int, n: c_ulong) ?*anyopaque;
pub extern fn strcmp(a: [*c]const u8, b: [*c]const u8) c_int;
pub extern fn strlen(s: [*c]const u8) c_ulong;
pub extern fn exit(status: c_int) void;
pub extern fn _exit(status: c_int) void;
pub extern fn sleep(seconds: c_uint) c_uint;
pub extern fn alarm(seconds: c_uint) c_uint;
pub extern fn time(t: [*c]c_long) c_long;
pub const off_t = i64;
pub const time_t = i64;
pub const pid_t = i32;
pub const suseconds_t = i32;
pub const FILE = anyopaque;
// Darwin exposes stdin/stdout/stderr as __stdinp/__stdoutp/__stderrp.
pub extern var __stdinp: ?*FILE;
pub extern var __stdoutp: ?*FILE;
pub extern var __stderrp: ?*FILE;
pub extern fn fopen(path: [*c]const u8, mode: [*c]const u8) ?*FILE;
pub extern var errno: c_int;
pub const tcflag_t = c_ulong;
pub const cc_t = u8;
pub const speed_t = c_ulong;
pub const struct_termios = extern struct {
    c_iflag: tcflag_t = 0,
    c_oflag: tcflag_t = 0,
    c_cflag: tcflag_t = 0,
    c_lflag: tcflag_t = 0,
    c_cc: [20]cc_t = std.mem.zeroes([20]cc_t),
    _pad: [4]u8 = std.mem.zeroes([4]u8),
    c_ispeed: speed_t = 0,
    c_ospeed: speed_t = 0,
};
pub extern fn tcgetattr(fd: c_int, t: [*c]struct_termios) c_int;
pub extern fn tcsetattr(fd: c_int, optional_actions: c_int, t: [*c]const struct_termios) c_int;
pub extern fn cfgetospeed(t: [*c]const struct_termios) speed_t;
pub const struct_timeval = extern struct {
    tv_sec: time_t = 0,
    tv_usec: suseconds_t = 0,
    _pad: c_int = 0,
};
pub const struct_itimerval = extern struct {
    it_interval: struct_timeval = std.mem.zeroes(struct_timeval),
    it_value: struct_timeval = std.mem.zeroes(struct_timeval),
};
pub extern fn setitimer(which: c_int, value: [*c]const struct_itimerval, ovalue: [*c]struct_itimerval) c_int;
pub const struct_winsize = extern struct {
    ws_row: c_ushort = 0,
    ws_col: c_ushort = 0,
    ws_xpixel: c_ushort = 0,
    ws_ypixel: c_ushort = 0,
};
pub const sighandler_t = ?*const fn (c_int) callconv(.c) void;

fn sig_special(n: usize) sighandler_t {
    // libc SIG_DFL=0 / SIG_IGN=1 are sentinel values, not callable pointers.
    // memcpy into the pointer avoids Zig's ptrFromInt alignment panic.
    var result: sighandler_t = undefined;
    const bytes = std.mem.asBytes(&n);
    @memcpy(@as([*]u8, @ptrCast(&result))[0..@sizeOf(usize)], bytes);
    return result;
}


pub const sigset_t = c_uint;
pub extern fn sigemptyset(set: [*c]sigset_t) c_int;
pub extern fn sigaddset(set: [*c]sigset_t, signo: c_int) c_int;
pub extern fn sigprocmask(how: c_int, set: [*c]const sigset_t, oset: [*c]sigset_t) c_int;
pub extern fn sigsuspend(set: [*c]const sigset_t) c_int;
pub extern fn open(path: [*c]const u8, flags: c_int, ...) c_int;
pub extern fn close(fd: c_int) c_int;
pub extern fn fcntl(fd: c_int, cmd: c_int, ...) c_int;
pub extern fn pipe(fds: [*c]c_int) c_int;
pub extern fn dup2(oldfd: c_int, newfd: c_int) c_int;
pub extern fn fork() pid_t;
pub extern fn wait(status: [*c]c_int) pid_t;
pub extern fn kill(pid: pid_t, sig: c_int) c_int;
pub extern fn setsid() pid_t;
pub extern fn setpgrp() c_int;
pub extern fn execve(path: [*c]const u8, argv: [*c]const [*c]u8, envp: [*c]const [*c]u8) c_int;
pub extern fn execl(path: [*c]const u8, arg: [*c]const u8, ...) c_int;
pub extern fn read(fd: c_int, buf: ?*anyopaque, n: c_ulong) ptrdiff_t;
pub extern fn write(fd: c_int, buf: ?*const anyopaque, n: c_ulong) ptrdiff_t;
pub extern fn fileno(stream: ?*FILE) c_int;
pub extern fn openpty(amaster: [*c]c_int, aslave: [*c]c_int, name: [*c]u8, termp: [*c]struct_termios, winp: [*c]struct_winsize) c_int;
pub extern fn login_tty(fd: c_int) c_int;
pub const struct_mpx = extern struct {
    ackfd: c_int = 0,
    kpid: c_int = 0,
    pid: c_int = 0,
    func: ?*const fn (object: ?*anyopaque, data: [*c]u8, len: ptrdiff_t) callconv(.c) void = null,
    object: ?*anyopaque = null,
    die: ?*const fn (object: ?*anyopaque) callconv(.c) void = null,
    dieobj: ?*anyopaque = null,
};
pub const MPX = struct_mpx;
pub const struct_utf8_sm = extern struct {
    buf: [8]u8 = std.mem.zeroes([8]u8),
    ptr: ptrdiff_t = 0,
    state: c_int = 0,
    accu: c_int = 0,
};
pub const struct_macro = extern struct {
    _pad: [48]u8 = std.mem.zeroes([48]u8),
};
pub const MACRO = struct_macro;
pub const struct_charmap = extern struct {
    _pad0: [16]u8 = std.mem.zeroes([16]u8),
    @"type": c_int = 0,
    _pad1: [2732]u8 = std.mem.zeroes([2732]u8),
};
pub const struct_scrn = extern struct {
    _pad: [840]u8 = std.mem.zeroes([840]u8),
};
pub const SCRN = struct_scrn;
pub const struct_screen = extern struct {
    t: [*c]SCRN = null,
    _pad: [40]u8 = std.mem.zeroes([40]u8),
};
pub const Screen = struct_screen;
pub extern fn joe_malloc(size: ptrdiff_t) ?*anyopaque;
pub extern fn joe_free(ptr: ?*anyopaque) void;
pub extern fn joe_read(fd: c_int, buf: ?*anyopaque, siz: ptrdiff_t) ptrdiff_t;
pub extern fn joe_write(fd: c_int, buf: ?*const anyopaque, siz: ptrdiff_t) ptrdiff_t;
pub extern fn joe_ioctl(fd: c_int, req: c_ulong, ptr: ?*anyopaque) c_int;
pub extern fn joe_set_signal(signum: c_int, handler: sighandler_t) c_int;
pub extern fn ttsig(sig: c_int) void;
pub extern var nodeadjoe: c_int;
pub extern fn set_attr(t: [*c]SCRN, c: c_int) c_int;
pub extern fn edupd(flg: c_int) void;
pub extern fn exemac(m: [*c]MACRO, k: c_int) c_int;
pub extern fn timer_play() [*c]MACRO;
pub extern fn do_auto_scroll() void;
pub extern fn mnow() c_long;
pub extern fn utf8_decode(sm: [*c]struct_utf8_sm, c: u8) c_int;
pub extern fn to_uni(map: [*c]struct_charmap, c: c_int) c_int;
pub extern var maint: [*c]Screen;
pub extern var locale_map: [*c]struct_charmap;
pub extern var dostaupd: c_int;
pub extern var auto_scroll: c_int;
pub extern var auto_trig_time: c_long;
pub extern var mainenv: [*c]const [*c]const u8;
pub export fn ttopen() void {
    sigjoe();
    ttopnn();
}
pub export fn ttopnn() void {
    var x: ptrdiff_t = undefined;
    _ = &x;
    var bbaud: speed_t = undefined;
    _ = &bbaud;
    var newterm: struct_termios = undefined;
    _ = &newterm;
    if (!(termin != null)) {
        if ((if (idleout != 0) @intFromBool(!((blk: {
            const tmp = __stdinp;
            termin = tmp;
            break :blk tmp;
        }) != null) or !((blk: {
            const tmp = __stdoutp;
            termout = tmp;
            break :blk tmp;
        }) != null)) else @intFromBool(!((blk: {
            const tmp = fopen("/dev/tty", "r");
            termin = tmp;
            break :blk tmp;
        }) != null) or !((blk: {
            const tmp = fopen("/dev/tty", "w");
            termout = tmp;
            break :blk tmp;
        }) != null))) != 0) {
            _ = fputs("Couldn't open /dev/tty\n", __stderrp);
            exit(1);
        } else {
            _ = joe_set_signal(SIGWINCH, winchd);
        }
    }
    if (ttymode != 0) return;
    ttymode = 1;
    _ = fflush(termout);
    _ = tcgetattr(fileno(termin), &oldterm);
    newterm = oldterm;
    newterm.c_lflag = 0;
    if (noxon != 0) {
        newterm.c_iflag &= ~@as(c_uint, @bitCast(@as(c_int, (((ICRNL | IGNCR) | INLCR) | IXON) | IXOFF)));
    } else {
        newterm.c_iflag &= ~@as(c_uint, @bitCast(@as(c_int, (ICRNL | IGNCR) | INLCR)));
    }
    newterm.c_oflag = 0;
    newterm.c_cc[VMIN] = 1;
    newterm.c_cc[VTIME] = 0;
    _ = tcsetattr(fileno(termin), TCSADRAIN, &newterm);
    bbaud = cfgetospeed(&newterm);
    tty_baud = 9600;
    upc = 0;
    {
        x = 0;
        while (@as(c_ulong, @bitCast(@as(c_long, x))) != (@sizeOf(@TypeOf(speeds_in)) / @sizeOf(speed_t))) : (x += 1) if (bbaud == speeds_in[@bitCast(@as(isize, @intCast(x)))]) {
            tty_baud = speeds_out[@bitCast(@as(isize, @intCast(x)))];
            break;
        };
    }
    if (Baud != 0) {
        tty_baud = Baud;
    }
    upc = @divTrunc(@as(c_long, DIVIDEND), tty_baud);
    if (obuf != null) {
        joe_free(@ptrCast(@alignCast(obuf)));
    }
    if (!(upc != 0)) {
        obufsiz = 4096;
    } else {
        obufsiz = @divTrunc(@as(c_long, 1000000), @as(c_long, TIMES) * upc);
        if (obufsiz > @as(ptrdiff_t, 4096)) {
            obufsiz = 4096;
        }
    }
    if (!(obufsiz != 0)) {
        obufsiz = 1;
    }
    obuf = @ptrCast(@alignCast(joe_malloc(obufsiz)));
}
pub export fn ttclose() void {
    ttclsn();
    signrm();
}
pub export fn ttclsn() void {
    var oleave: c_int = undefined;
    _ = &oleave;
    if (ttymode != 0) {
        ttymode = 0;
    } else return;
    oleave = leave;
    leave = 1;
    _ = ttflsh();
    _ = tcsetattr(fileno(termin), TCSADRAIN, &oldterm);
    leave = oleave;
}
